# 42-Filler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: filler.h  filler_defines.h  filler_structs.h
resources/: filler.trace
sources/: algo.c  block_parsing.c  debug.c  error.c  main.c  map_parsing.c  map_processing.c  parsing.c  safe_malloc.c  utils.c
visualizer/: game.txt  visualizer.py
